# video-object-detector

./: .flake8  LICENSE  README.md  lint.sh  pyproject.toml  test.sh
.github/workflows/: test.yml
bicycle_detector/: classifier.py  cli.py  video.py
object_detector/: classifier.py  cli.py  display.py  media.py  video.py
tests/: conftest.py  test_classifier.py  test_media.py  test_video.py
video_object_detector/: __init__.py  display.py  media.py
