[tool.poetry]
name = "bicycle-detector"
version = "0.1.0"
description = ""
authors = ["Seto Balian <seto.balian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.37.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^23.12.1"
isort = "^5.13.2"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
